--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -11,9 +11,16 @@ RUN apt update && \
     python3 -m pip install -U psycopg2-binary && \
     python3 -m pip install -U py4web
 
+COPY requirements.txt .
+
+RUN python3 -m pip install -U -r requirements.txt
+
 USER $user
 
 RUN cd /home/$user/ && py4web setup --yes apps
+
+RUN chown $user -R /home/$user/apps
+RUN chmod ug+rw -R /home/$user/apps
 
 EXPOSE 8000
 
